[package]
name = "moq-web"
authors = ["Luke Curley <kixelated@gmail.com>"]
edition = "2021"
version = "0.3.9"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kixelated/moq-web"
description = "Web implementation for MoQ utilizing WebAssembly+Typescript"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

console_error_panic_hook = "0.1"
tracing = "0.1"
wasm-tracing = "0.2"
gloo-net = "0.6"

moq-karp = { version = "0.11", path = "../moq-karp", default-features = false }
web-codecs = "0.3.2"
tokio = { version = "1", features = ["sync"] }

js-sys = "0.3.72"
url = "2"
thiserror = "2"
hex = "0.4"

[dependencies.web-sys]
version = "0.3.72"
features = [
	"Window",
	"Document",
	"HtmlElement",
	"Node",
	"Text",

	# WebCodecs
	"VideoDecoder",
	"VideoDecoderInit",
	"VideoDecoderConfig",
	"VideoFrame",
	"VideoColorSpaceInit",
	"EncodedVideoChunk",
	"EncodedVideoChunkInit",
	"EncodedVideoChunkType",

	# Canvas stuff
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"HtmlImageElement",
	"OffscreenCanvas",
	"DedicatedWorkerGlobalScope",
	"OffscreenCanvasRenderingContext2d",
]
