[package]
name = "moq-web"
authors = ["Luke Curley <kixelated@gmail.com>"]
edition = "2021"
version = "0.4.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kixelated/moq-web"
description = "Web implementation for MoQ utilizing WebAssembly+Typescript"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

console_error_panic_hook = "0.1"
tracing = "0.1"
wasm-tracing = "0.2"
gloo-net = "0.6"

moq-karp = { version = "0.13", path = "../moq-karp", default-features = false }
moq-async = { version = "0.1", path = "../moq-async" }
web-streams = "0.1.1"
web-codecs = "0.3.5"
web-time = "1"
tokio = { version = "1", features = ["sync"] }

js-sys = "0.3.77"
url = "2"
thiserror = "2"
hex = "0.4"
baton = "0.2.1"

[dependencies.web-sys]
version = "0.3.77"
features = [
	# DOM
	"Window",
	"Document",
	"HtmlElement",
	"Node",
	"Text",
	"HtmlVideoElement",

	# Custom elements
	"HtmlSlotElement",
	"AssignedNodesOptions",
	"CustomEvent",
	"CustomEventInit",
	"Event",
	"EventTarget",

	# Canvas stuff
	"CanvasRenderingContext2d",
	"HtmlCanvasElement",
	"HtmlImageElement",
	"OffscreenCanvas",
	"DedicatedWorkerGlobalScope",
	"OffscreenCanvasRenderingContext2d",

	# Capture
	"MediaStream",
	"MediaStreamTrack",
	"MediaTrackSettings",
	"MediaStreamTrackProcessor",
	"MediaStreamTrackProcessorInit",
	"ReadableStreamDefaultReader",
]
