[package]
name = "mp4-atom"
description = "A MP4/ISOBMFF atom decoder and encoder"
authors = ["Luke Curley <kixelated@gmail.com>"]
repository = "https://github.com/kixelated/mp4-atom"
license = "MIT OR Apache-2.0"

version = "0.7.1"
edition = "2021"

keywords = ["mp4", "isobmff", "mp4box", "audio", "video"]
categories = ["multimedia::encoding"]

[dependencies]
paste = "1"
thiserror = "1"
num = "0.4"
tracing = "0.1"
derive_more = { version = "2", features = ["from"] }

bytes = { version = "1", optional = true }
tokio = { version = "1", features = ["io-util"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
tokio = ["dep:tokio"]
bytes = ["dep:bytes"]
serde = ["dep:serde", "bytes/serde"]

[dev-dependencies]
anyhow = "1"
tracing-subscriber = "0.3"
