[workspace]
members = [
    "hang",
    "hang-cli",
    "hang-gst",
    "hang-wasm",
    "moq",
    "moq-clock",
    "moq-native",
    "moq-relay",
    "moq-token",
    "moq-token-cli",
]

# without hang-gst because it requires gstreamer to be installed
# and without hang-wasm because it's deprecated and weird
default-members = [
    "hang",
    "hang-cli",
    "moq",
    "moq-clock",
    "moq-native",
    "moq-relay",
    "moq-token",
    "moq-token-cli",
]
resolver = "2"

[workspace.dependencies]

hang = { version = "0.3", path = "hang" }
moq-lite = { version = "0.3", path = "moq" }
moq-native = { version = "0.7", path = "moq-native" }
moq-token = { version = "0.1", path = "moq-token" }

serde = { version = "1", features = ["derive"] }
tokio = "1.45"
web-async = { version = "0.1.1", features = ["tracing"] }
web-transport = "0.9.3"

[profile.release.package.hang-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
