[package]
name = "moq-clock"
description = "CLOCK over QUIC"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/moq-rs"
license = "MIT OR Apache-2.0"

version = "0.5.26"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moq-native = { workspace = true }
moq-lite = { workspace = true }

# QUIC
url = "2"

# Async stuff
tokio = { workspace = true, features = ["full"] }

# CLI, logging, error handling
clap = { version = "4", features = ["derive"] }
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"

# CLOCK STUFF
chrono = "0.4"
